--- a/notifications/infrastructure/cloudformation.yaml
+++ b/notifications/infrastructure/cloudformation.yaml
@@ -371,3 +371,4 @@ Outputs:
     Value: !Ref ProcessorLambda
     Export:
       Name: !Sub '${AWS::StackName}-ProcessorLambda'
+# crm-lead-system-leads-635374934580 bucket
