--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -34,7 +34,8 @@ jobs:
 
     - name: Run linting
       run: |
-        flake8 lambda --max-line-length=120
+        flake8 lambda1 --max-line-length=120
+        flake8 lambda2 --max-line-length=120
 
     # -----------------------------------
     # Package Lambda
