--- a/notifications/infrastructure/cloudformation.yaml
+++ b/notifications/infrastructure/cloudformation.yaml
@@ -9,6 +9,19 @@ Parameters:
     Default: crm-lead-system
     Description: Project name for resource naming
 
+  UseExistingBucket:
+    Type: String
+    Default: 'false'
+    AllowedValues:
+      - 'true'
+      - 'false'
+    Description: Set to 'true' if bucket already exists
+
+  ExistingBucketName:
+    Type: String
+    Default: ''
+    Description: Name of existing bucket (only if UseExistingBucket is true)
+
   SlackWebhookUrl:
     Type: String
     NoEcho: true
@@ -28,6 +41,7 @@ Parameters:
     MaxValue: 900
 
 Conditions:
+  CreateNewBucket: !Equals [!Ref UseExistingBucket, 'false']
   UseSlack: !Not [!Equals [!Ref SlackWebhookUrl, '']]
   UseEmail: !Not [!Equals [!Ref NotificationEmail, '']]
 
