--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -76,8 +76,8 @@ jobs:
     # -----------------------------------
     - name: Upload Lambda package
       run: |
-        aws s3 cp lambda1/lead_processor.zip s3://${{ secrets.S3_BUCKET }}/lambda1/lead_processor.zip
-        aws s3 cp lambda2/webhook_ingestion.zip s3://${{ secrets.S3_BUCKET }}/lambda2/webhook_ingestion.zip
+        aws s3 cp lambda1/lead_processor.zip s3://${{ secrets.S3_BUCKET }}/lambda/lead_processor.zip
+        aws s3 cp lambda2/webhook_ingestion.zip s3://${{ secrets.S3_BUCKET }}/lambda/webhook_ingestion.zip
 
         aws cloudformation validate-template \
           --template-body file://notifications/infrastructure/cloudformation.yaml
