--- a/notifications/infrastructure/cloudformation.yaml
+++ b/notifications/infrastructure/cloudformation.yaml
@@ -8,6 +8,9 @@ Parameters:
     Type: String
     Default: crm-lead-system
     Description: Project name for resource naming  
+  ArtifactBucket:
+    Type: String
+    Default: crm-lead-system-artifacts-635374934580
 
   SlackWebhookUrl:
     Type: String
@@ -233,7 +236,7 @@ Resources:
           BUCKET_NAME: !Ref LeadDataBucket
           SOURCE_PREFIX: 'source/'
       Code:
-        S3Bucket: !Ref LeadDataBucket 
+        S3Bucket: !Ref ArtifactBucket 
         S3Key: lambda2/webhook_ingetsion.zip 
           
 
@@ -257,7 +260,7 @@ Resources:
           USE_SLACK: !If [UseSlack, 'true', 'false']
           USE_EMAIL: !If [UseEmail, 'true', 'false']
       Code:
-        S3Bucket: !Ref LeadDataBucket 
+        S3Bucket: !Ref ArtifactBucket 
         S3Key: lambda1/lead_processor.zip
           
 
