--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -65,6 +65,10 @@ jobs:
 
         aws cloudformation wait stack-delete-complete --stack-name crm-lead-system --region us-west-1
 
+        aws s3 mb s3://crm-lead-system-artifacts-635374934580 \
+        --region us-west-1 \
+        --create-bucket-configuration LocationConstraint=us-west-1
+
         aws s3api head-bucket --bucket ${{ secrets.S3_BUCKET }} 2>/dev/null || \
         aws s3api create-bucket \
         --bucket "${{ secrets.S3_BUCKET }}" \
