--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -89,7 +89,7 @@ jobs:
         aws cloudformation deploy \
           --stack-name crm-lead-system \
           --template-file notifications/infrastructure/cloudformation.yaml \
-          --parameter-overrides LeadDataBucket=${{ secrets.S3_BUCKET }} \
+          --parameter-overrides ArtifactBucket=crm-lead-system-artifact-635374934580 \
           --capabilities CAPABILITY_NAMED_IAM
     
           
