--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -64,10 +64,11 @@ jobs:
         aws cloudformation delete-stack --stack-name crm-lead-system --region us-west-1
 
         aws cloudformation wait stack-delete-complete --stack-name crm-lead-system --region us-west-1
-
-        aws s3 mb s3://crm-lead-system-artifacts-635374934580 \
-        --region us-west-1 \
-        --create-bucket-configuration LocationConstraint=us-west-1
+        
+        aws s3api create-bucket \
+        --bucket "crm-lead-system-artifacts-635374934580" \
+        --region "${{ secrets.AWS_REGION }}" \
+        --create-bucket-configuration LocationConstraint="${{ secrets.AWS_REGION }}" 
 
         aws s3api head-bucket --bucket ${{ secrets.S3_BUCKET }} 2>/dev/null || \
         aws s3api create-bucket \
