--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -42,8 +42,13 @@ jobs:
     # -----------------------------------
     - name: Build Lambda ZIP
       run: |
-        zip -r lambda1/lead_processor.zip .
-        zip -r lambda2/webhook_ingestion.zip .
+        cd lambda1
+        zip -r lead_processor.zip .
+        cd ..
+        
+        cd lambda2
+        zip -r webhook_ingestion.zip .
+        cd ..
 
     # -----------------------------------
     # Configure AWS Credentials
@@ -80,6 +85,15 @@ jobs:
         aws s3 cp lambda2/webhook_ingestion.zip s3://${{ secrets.S3_BUCKET }}/lambda2/webhook_ingestion.zip
 
         aws s3 ls s3://${{ secrets.S3_BUCKET }}/ --recursive
+
+        aws s3api head-object \
+        --bucket "${{ secrets.S3_BUCKET }}" \
+        --key lambda1/lead_processor.zip
+
+        aws s3api head-object \
+        --bucket "${{ secrets.S3_BUCKET }}" \
+        --key lambda2/webhook_ingestion.zip
+
 
         aws cloudformation validate-template \
           --template-body file://notifications/infrastructure/cloudformation.yaml
