--- a/notifications/infrastructure/cloudformation.yaml
+++ b/notifications/infrastructure/cloudformation.yaml
@@ -108,7 +108,7 @@ Resources:
   S3NotificationFunction:
     Type: AWS::Lambda::Function
     Properties:
-      FunctionName: !Sub '${ProjectName}-s3-notification-config'
+      FunctionName: !Sub '${ProjectName}-s3-config-${AWS::StackName}'
       Runtime: python3.11
       Handler: notification.handler
       Role: !GetAtt S3NotificationFunctionRole.Arn
